<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Days left</string>
    <string name="no_title">No title</string>
    <string name="configure_title_label">Title</string>
    <string name="configure_date_label">Date</string>
    <string name="configure_save">Save</string>
    <string name="icon_copyright">Application icon:\nCandy Clock, © 2008 cemagraphics\nused with permission</string>

</resources>